k8s/manifests-71423d/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-71423d
  namespace: journee
  labels:
    app: journee-71423d
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-71423d
  template:
    metadata:
      labels:
        app: journee-71423d
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-71423d
          image: gcr.io/my-docker-471807/journee:71423d-62cf28
          ports:
            - containerPort: 3000
