k8s/manifests-71423d/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-71423d
  namespace: journee
spec:
  selector:
    app: journee-71423d
  ports:
    - port: 80
      targetPort: 3000
